# SBOM-python-ecosystem

./: .gitignore  README.md
data/: README.md  get-sboms.sh
data/sboms/cdxgen/: hatch-hatchling-result.json  hatch-pdm-result.json  hatch-setuptools-result.json  pdm-flit-result.json  pdm-hatchling-result.json  pdm-pdm-result.json  pdm-setuptools-result.json  pip-hatchling-result.json  pip-pdm-result.json  pip-setuptools-result.json  pipenv-pdm-result.json  poetry-poetry-result.json
data/sboms/ort/: hatch-hatchling.cyclonedx.json  hatch-pdm.cyclonedx.json  hatch-setuptools.cyclonedx.json  pdm-flit.cyclonedx.json  pdm-hatchling.cyclonedx.json  pdm-pdm.cyclonedx.json  pdm-setuptools.cyclonedx.json  pip-hatchling.cyclonedx.json  pip-pdm.cyclonedx.json  pip-setuptools.cyclonedx.json  pipenv-pdm.cyclonedx.json  poetry-poetry.cyclonedx.json
data/sboms/syft/: hatch-hatchling-result.json  hatch-pdm-result.json  hatch-setuptools-result.json  pdm-flit-result.json  pdm-hatchling-result.json  pdm-pdm-result.json  pdm-setuptools-result.json  pip-hatchling-result.json  pip-pdm-result.json  pip-setuptools-result.json  pipenv-pdm-result.json  poetry-poetry-result.json
data/sboms/trivy/: hatch-hatchling-result.json  hatch-pdm-result.json  hatch-setuptools-result.json  pdm-flit-result.json  pdm-hatchling-result.json  pdm-pdm-result.json  pdm-setuptools-result.json  pip-hatchling-result.json  pip-pdm-result.json  pip-setuptools-result.json  pipenv-pdm-result.json  poetry-poetry-result.json
projects/: README.md
projects/hatch-hatchling/: pyproject.toml
projects/hatch-pdm/: pyproject.toml
projects/hatch-setuptools/: pyproject.toml
projects/pdm-flit/: pyproject.toml
projects/pdm-hatchling/: pyproject.toml
projects/pdm-pdm/: pyproject.toml
projects/pdm-setuptools/: pyproject.toml
projects/pip-hatchling/: pyproject.toml
projects/pip-pdm/: pyproject.toml  requirements.txt
projects/pip-setuptools/: pyproject.toml
projects/pipenv-pdm/: Pipfile  pyproject.toml
projects/poetry-poetry/: pyproject.toml
