[project]
name = "pipenv-pdm"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.build.targets.wheel]
packages = ["src/pipenv-pdm"]