[tool.poetry]
name = "poetry-poetry"
version = "0.1.0"
description = ""
authors = ["Author"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
black = {git = "https://github.com/psf/black.git", rev = "21.10b0"}
docopt = {url = "https://files.pythonhosted.org/packages/a2/55/8f8cab2afd404cf578136ef2cc5dfb50baa1761b68c9da1fb1e4eed343c9/docopt-0.6.2.tar.gz"}
seaborn = "0.12.2"
matplotlib = "^3.9.3"
urllib3 = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.optional]
optional = true

[tool.poetry.group.optional.dependencies]
nltk = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
